# logic-hf

./: .pre-commit-config.yaml  Cargo.toml  README.md
crates/logic-hf/: Cargo.toml
crates/logic-hf-cli/: Cargo.toml
crates/logic-hf-cli/src/: main.rs
crates/logic-hf-core/: Cargo.toml
