[profile.release]
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
debug = "limited"
inherits = "release"

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
logic-hf = {version = "0.1", path = "crates/logic-hf", default-features = false}
# logic-hf-cli = {version = "0.1", path = "crates/logic-hf-cli", default-features = false}
logic-hf-core = {version = "0.1", path = "crates/logic-hf-core", default-features = false}

[workspace.package]
authors = ["Jevin Sweval <jevinsweval@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/jevinskie/logic-hf"
rust-version = "1.91"
