[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
repository = "https://github.com/jevinskie/logic-hf"
authors = ["Jevin Sweval <jevinsweval@gmail.com>"]
license = "BSD-2-Clause"
edition = "2024"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
logic-hf = {path = "crates/logic-hf", default-features = false}
logic-hf-core = {path = "crates/logic-hf-core", default-features = false}

[profile.release]
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
debug = "limited"
inherits = "release"
