[dependencies]
clap = {version = "4.5.53", features = ["unicode", "unstable-v5", "default", "wrap_help", "derive", "unstable-ext", "unstable-styles"]}

[package]
edition = "2024"
name = "logic-hf-cli"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
